# gameflow-deck

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  bun.lockb  bunfig.toml  drizzle.config.ts  electrobun.config.ts  gameflow-deck.code-workspace  package.json  tailwind.config.js  tsconfig.json  vite-env-override.d.ts  vite.config.ts
.config/appimage/: AppRun  com.simeonradivoev.gameflow-deck.appdata.xml  com.simeonradivoev.gameflow-deck.desktop
.config/flatpak/: com.simeonradivoev.gameflow-deck.desktop  com.simeonradivoev.gameflow-deck.json
.config/flatpak/webview/: CMakeLists.txt  main.cpp
.forgejo/workflows/: build.yml
.github/workflows/: build.yml
drizzle/: 0000_pretty_harry_osborn.sql  0001_outstanding_silk_fever.sql  0002_flowery_rocket_raccoon.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
scripts/: build-appimage.ts  dev.ts  download-chromium.ts  download-nw.ts  generate-audio-sprites.ts  generate-es-de-mapping.ts  generate-flatpak-sources.ts  package-bun.ts
scripts/romm/: openapi-ts.ts  openapi.json
src/bun/: browser.ts  controls.ts  index.ts  server.ts  types.d.ts  utils.ts  webview-worker.ts
src/mainview/: App.tsx  index.css  index.html  index.tsx  manifest.json  preload.tsx  query-options.ts  routeTree.gen.ts  types.d.ts
src/shared/: constants.ts  public-types.ts  types..d.ts  utils.ts
src/tests/: client.ts  downloads.test.ts  game-launching.test.ts  preload.ts
vendors/es-de/: README.md  emulators.darwin.x64.json  emulators.darwin.x64.sqlite  emulators.haiku.x64.json  (+7 more)
(+240 files in other folders)
